--- a/sample.env
+++ b/sample.env
@@ -2,13 +2,13 @@
 # Variables should be changed for you and the sample from
 # the file name removed (e.g. renamed to .env)
 
-JIRA_USER=JIRA_USERNAME
-JIRA_PASS=JIRA_PASSWORD
+JIRA_USER=$JIRA_USER
+JIRA_PASS=$JIRA_PASS
 
 # Test_hook sends the output to personal slack channel
 
-TEST_HOOK=https://hooks.slack.com/services/{+SOMETHING SLACK GAVE YOU}
+TEST_HOOK=$SLACK_TEST
 
 # Prod_hook sends the output to a group chat
 
-PROD_HOOK=https://hooks.slack.com/services/{+SOMETHING SLACK GAVE YOU + SHOULD BE DIFFERENT TO TEST}
+PROD_HOOK=$SLACK_PROD
