--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ variables:
 
 before_script:
     - echo $PATH
-    - python -v
+    - sudo apt-get install python3.8 python3-pip
+    - python3 -v
     - pip3 install jira-python
     - pip3 install datetime
     - pip3 install python-dotenv
@@ -26,4 +27,4 @@ mrbtk:
   tags:
    - autoscale
   script:
-    - python MrBTK_v2.py
+    - python3 MrBTK_v2.py
