--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
 
 before_script:
     - echo $PATH
-    - sudo apt-get install python3.8 python3-pip
+    - apt-get install python3.8 python3-pip
     - python3 -v
     - pip3 install jira-python
     - pip3 install datetime
