--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ before_script:
     - echo $PATH
     - apt-get install python3.8 python3-pip
     - python3 -v
-    - pip3 install jira-python
+    - pip3 install jira
     - pip3 install datetime
     - pip3 install python-dotenv
 
