--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ variables:
 
 before_script:
     - echo $PATH
+    - apt-get install curl
     - apt-get install python3.8 python3-pip
     - python3 -v
     - pip3 install jira
