--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ variables:
 
 before_script:
     - echo $PATH
-    - apt-get -y install curl
-    - apt-get install python3.8 python3-pip
+    - apt get -y install curl
+    - apt get install python3.8 python3-pip
     - python3 -v
     - pip3 install jira
     - pip3 install datetime
